--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome": "^1.1.8",
+        "@fortawesome/fontawesome-free-solid": "^5.0.13",
         "@popperjs/core": "^2.11.6",
-        "@vitejs/plugin-vue": "^4.5.0",
+        "@vitejs/plugin-vue": "^4.6.2",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
+        "i": "^0.3.7",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "sass": "^1.56.1",
